# better-assistant-be

./: .env.example  Dockerfile  README.md  better-assistant-be.yaml  main.py  pyproject.toml
.github/workflows/: github_actions_workflow.yaml
better_asisstant/: exceptions.py
better_asisstant/managers/: history.py
better_asisstant/models/: models.py  problem.py
better_asisstant/utils/: __init__.py  mongo.py
better_assistant/: __init__.py  exceptions.py
better_assistant/managers/: history.py
better_assistant/models/: __init__.py  models.py  mongo.py
better_assistant/services/: __init__.py  chat.py  generate.py  project.py  prompt.py
better_assistant/utils/: __init__.py  mongo.py
