[project]
name = "better-assistant-be"
version = "0.1.0"
description = "prompt testing project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pymongo>=4.10.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "python-multipart>=0.0.20",
    "ruff>=0.9.2",
    "uvicorn[standard]>=0.34.0",
]

[tool.ruff]
line-length = 120
lint.select = ["B", "E", "F", "I", "W"]
lint.ignore = ["B905", "B008", "B904", "F811", "E501", "F401"]
lint.fixable = ["B", "F", "I", "W"]
lint.unfixable = []
